2002-05-10  Bastien Nocera  <hadess@hadess.net>

	* mahjongg.c: (main): s/Time\ :/Time:/ as per Nils' recommendation

2002-05-09  Bastien Nocera  <hadess@hadess.net>

	* mahjongg.c: (main): changed back the string, use spaces as
	separators for the statusbar items

2002-05-09  Bastien Nocera  <hadess@hadess.net>

	* mahjongg.c: (about_callback), (main): moved the "moves left" and
	"tiles left" labels to the status bar (Closes: #80712), added icon in
	the about box

2002-05-09  Bastien Nocera  <hadess@hadess.net>

	* mahjongg.c: (set_popup), (apply_preferences),
	(create_mahjongg_board), (main): more gconf work, not instant apply
	and doesn't listen to changes
	* mahjongg.schemas: updated, changed default bg colour

2002-05-09  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* mahjongg.c: (show_toolbar_changed_cb), (show_tb_callback),
	(main):
	* mahjongg.schemas: start of gconf support (Closes: #77142),
	much more to be done, add tooltips to the toolbar items

2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/aisleriot-C.omf: updated for new format of SK 0.3.8.
	
2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/mahjongg.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* mahjongg.c: Mark a string for translation.
	
2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/mahjongg.xml : move to XML.
	* help/C/mahjongg-C.omf : move to XML.
	* help/C/mahjongg.sgml : deleted, move to XML.
	* help/C/Makefile.am : move to XML.

2002-02-09  Gediminas Paulauskas <menesis@delfi.lt>

	* mahjongg.c: name it simply.... "Mahjongg". Removed "Prefs" from
	toolbar, added "Help" to preferences dialog, pack tile and tile
	background into one frame.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* mahjongg.c (about_callback): Don't try to translate empty string.
